--- a/testMovieRec2.ipynb
+++ b/testMovieRec2.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1305,
-   "id": "b19b5edc",
+   "id": "19c16110",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 1306,
-   "id": "4d22df5b",
+   "id": "446170f2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 1307,
-   "id": "e9663c45",
+   "id": "e9aa3816",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 1308,
-   "id": "7db370d5",
+   "id": "11833295",
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 1309,
-   "id": "2463c22d",
+   "id": "51805e0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 1310,
-   "id": "7fdc76f4",
+   "id": "b68b94dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 1311,
-   "id": "bb1b88a1",
+   "id": "71a897a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 1312,
-   "id": "6e176acc",
+   "id": "f6364891",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 1313,
-   "id": "03a174b9",
+   "id": "8094430f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 1314,
-   "id": "2a6620d1",
+   "id": "ae9df516",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": 1315,
-   "id": "3013aa78",
+   "id": "0cb3e5e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 1316,
-   "id": "7944e193",
+   "id": "125a6655",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 1317,
-   "id": "3c88392c",
+   "id": "dcac42db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 1318,
-   "id": "00f1edb1",
+   "id": "7182b9de",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 1319,
-   "id": "7faa8f4a",
+   "id": "95faa61c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": 1320,
-   "id": "2e480d56",
+   "id": "91f5c348",
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 1321,
-   "id": "a438d658",
+   "id": "bedc31d1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": 1322,
-   "id": "308ab2f4",
+   "id": "a6bdf7b7",
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
   {
    "cell_type": "code",
    "execution_count": 1323,
-   "id": "9ffd5d89",
+   "id": "3168be19",
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
   {
    "cell_type": "code",
    "execution_count": 1324,
-   "id": "d29697af",
+   "id": "e32b094a",
    "metadata": {},
    "outputs": [
     {
@@ -566,7 +566,7 @@
   {
    "cell_type": "code",
    "execution_count": 1325,
-   "id": "b1a92e98",
+   "id": "0618dc71",
    "metadata": {},
    "outputs": [
     {
@@ -1596,7 +1596,7 @@
   {
    "cell_type": "code",
    "execution_count": 1326,
-   "id": "fd6fae99",
+   "id": "3ccdf51c",
    "metadata": {},
    "outputs": [
     {
@@ -1621,7 +1621,7 @@
   {
    "cell_type": "code",
    "execution_count": 1327,
-   "id": "4cb7f77d",
+   "id": "da69ef3f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1633,7 +1633,7 @@
   {
    "cell_type": "code",
    "execution_count": 1328,
-   "id": "10a88397",
+   "id": "391915f1",
    "metadata": {},
    "outputs": [
     {
@@ -1659,7 +1659,7 @@
   {
    "cell_type": "code",
    "execution_count": 1329,
-   "id": "6d166968",
+   "id": "3dfbdd13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1671,7 +1671,7 @@
   {
    "cell_type": "code",
    "execution_count": 1330,
-   "id": "0ea75a1b",
+   "id": "69c3edfe",
    "metadata": {},
    "outputs": [
     {
@@ -1692,7 +1692,7 @@
   {
    "cell_type": "code",
    "execution_count": 1331,
-   "id": "eec69062",
+   "id": "2ed3b147",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1708,7 +1708,7 @@
   {
    "cell_type": "code",
    "execution_count": 1332,
-   "id": "3d542f8e",
+   "id": "285a95b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1729,7 +1729,7 @@
   {
    "cell_type": "code",
    "execution_count": 1333,
-   "id": "48a39427",
+   "id": "b2e1c127",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1741,7 +1741,7 @@
   {
    "cell_type": "code",
    "execution_count": 1334,
-   "id": "20e58bee",
+   "id": "b8c407a9",
    "metadata": {},
    "outputs": [
     {
@@ -1996,7 +1996,7 @@
   {
    "cell_type": "code",
    "execution_count": 1335,
-   "id": "ce24e97c",
+   "id": "17f27304",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2009,7 +2009,7 @@
   {
    "cell_type": "code",
    "execution_count": 1336,
-   "id": "7df1d23b",
+   "id": "41dc150f",
    "metadata": {},
    "outputs": [
     {
@@ -2030,7 +2030,7 @@
   {
    "cell_type": "code",
    "execution_count": 1351,
-   "id": "f2b47215",
+   "id": "c491362f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2042,7 +2042,7 @@
   {
    "cell_type": "code",
    "execution_count": 1352,
-   "id": "657f35de",
+   "id": "cccc796b",
    "metadata": {},
    "outputs": [
     {
@@ -2075,7 +2075,7 @@
   {
    "cell_type": "code",
    "execution_count": 1360,
-   "id": "17f3e15a",
+   "id": "4efe13ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2096,7 +2096,7 @@
   {
    "cell_type": "code",
    "execution_count": 1361,
-   "id": "e058439c",
+   "id": "a9d321e5",
    "metadata": {},
    "outputs": [
     {
@@ -2121,7 +2121,7 @@
   {
    "cell_type": "code",
    "execution_count": 1362,
-   "id": "c6da4f85",
+   "id": "7144de25",
    "metadata": {},
    "outputs": [
     {
@@ -2148,7 +2148,7 @@
   {
    "cell_type": "code",
    "execution_count": 1357,
-   "id": "8999c75f",
+   "id": "a3c12235",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2158,13 +2158,13 @@
     "    recommendations = recommend(selected_movie_name)\n",
     "    st.write(\"Based on your selection, we recommend the following movies:\")\n",
     "    for j in recommendations:\n",
-    "        st.write(j[0])"
+    "        st.write(j)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1358,
-   "id": "3072a78f",
+   "execution_count": 1363,
+   "id": "aa07cbad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2173,7 +2173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94b495eb",
+   "id": "0d476fc1",
    "metadata": {},
    "source": [
     "Please click the button to open the web app: [![Open in Streamlit](https://static.streamlit.io/badges/streamlit_badge_black_white.svg)](https://sunlongan-testmovierec-testmovierec-iqjd0v.streamlit.app/)"
