--- a/testMovieRec2.ipynb
+++ b/testMovieRec2.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1305,
-   "id": "19c16110",
+   "execution_count": 1415,
+   "id": "01804b1d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,13 +12,13 @@
     "import streamlit as st\n",
     "import pandas as pd\n",
     "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "from sklearn.feature_extraction.text import CountVectorizer"
+    "from sklearn.feature_extraction.text import TfidfVectorizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1306,
-   "id": "446170f2",
+   "execution_count": 1416,
+   "id": "42fae23b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,8 +32,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1307,
-   "id": "e9aa3816",
+   "execution_count": 1417,
+   "id": "28c98260",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,8 +43,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1308,
-   "id": "11833295",
+   "execution_count": 1418,
+   "id": "1fd7201e",
    "metadata": {},
    "outputs": [
     {
@@ -68,8 +68,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1309,
-   "id": "51805e0f",
+   "execution_count": 1419,
+   "id": "e6c96563",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,8 +80,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1310,
-   "id": "b68b94dc",
+   "execution_count": 1420,
+   "id": "2507fa25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,8 +92,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1311,
-   "id": "71a897a1",
+   "execution_count": 1421,
+   "id": "d0e8542d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,8 +110,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1312,
-   "id": "f6364891",
+   "execution_count": 1422,
+   "id": "498bfed6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,8 +122,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1313,
-   "id": "8094430f",
+   "execution_count": 1423,
+   "id": "ce30c14c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,8 +134,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1314,
-   "id": "ae9df516",
+   "execution_count": 1424,
+   "id": "1034061a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,8 +146,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1315,
-   "id": "0cb3e5e7",
+   "execution_count": 1425,
+   "id": "e17725b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,8 +164,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1316,
-   "id": "125a6655",
+   "execution_count": 1426,
+   "id": "f9bf403e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,8 +176,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1317,
-   "id": "dcac42db",
+   "execution_count": 1427,
+   "id": "aa54a328",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,8 +188,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1318,
-   "id": "7182b9de",
+   "execution_count": 1428,
+   "id": "aa45a8b8",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "True"
       ]
      },
-     "execution_count": 1318,
+     "execution_count": 1428,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,8 +209,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1319,
-   "id": "95faa61c",
+   "execution_count": 1429,
+   "id": "2df08603",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,8 +221,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1320,
-   "id": "91f5c348",
+   "execution_count": 1430,
+   "id": "9d3172e4",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
        "4       The Lord of the Rings: The Two Towers (2002)  "
       ]
      },
-     "execution_count": 1320,
+     "execution_count": 1430,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,8 +345,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1321,
-   "id": "bedc31d1",
+   "execution_count": 1431,
+   "id": "c630917f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,8 +362,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1322,
-   "id": "a6bdf7b7",
+   "execution_count": 1432,
+   "id": "c3b14eab",
    "metadata": {},
    "outputs": [
     {
@@ -475,7 +475,7 @@
        "4       The Lord of the Rings: The Two Towers (2002)  "
       ]
      },
-     "execution_count": 1322,
+     "execution_count": 1432,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,8 +486,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1323,
-   "id": "3168be19",
+   "execution_count": 1433,
+   "id": "385065fd",
    "metadata": {},
    "outputs": [
     {
@@ -524,7 +524,7 @@
        " ('reality-tv', 1)]"
       ]
      },
-     "execution_count": 1323,
+     "execution_count": 1433,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,8 +537,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1324,
-   "id": "e32b094a",
+   "execution_count": 1434,
+   "id": "17edc2b4",
    "metadata": {},
    "outputs": [
     {
@@ -565,8 +565,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1325,
-   "id": "0618dc71",
+   "execution_count": 1435,
+   "id": "2a762725",
    "metadata": {},
    "outputs": [
     {
@@ -1582,7 +1582,7 @@
        " ...]"
       ]
      },
-     "execution_count": 1325,
+     "execution_count": 1435,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1595,8 +1595,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1326,
-   "id": "3ccdf51c",
+   "execution_count": 1436,
+   "id": "70f5a1d4",
    "metadata": {},
    "outputs": [
     {
@@ -1620,8 +1620,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1327,
-   "id": "da69ef3f",
+   "execution_count": 1437,
+   "id": "2f626ccd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1632,8 +1632,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1328,
-   "id": "391915f1",
+   "execution_count": 1438,
+   "id": "57e61be7",
    "metadata": {},
    "outputs": [
     {
@@ -1642,7 +1642,7 @@
        "2000"
       ]
      },
-     "execution_count": 1328,
+     "execution_count": 1438,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1658,8 +1658,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1329,
-   "id": "3dfbdd13",
+   "execution_count": 1439,
+   "id": "4c2e165f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1670,8 +1670,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1330,
-   "id": "69c3edfe",
+   "execution_count": 1440,
+   "id": "8a6b0046",
    "metadata": {},
    "outputs": [
     {
@@ -1691,8 +1691,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1331,
-   "id": "2ed3b147",
+   "execution_count": 1441,
+   "id": "f0a9435e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1707,8 +1707,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1332,
-   "id": "285a95b7",
+   "execution_count": 1442,
+   "id": "0f1b2560",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1728,8 +1728,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1333,
-   "id": "b2e1c127",
+   "execution_count": 1443,
+   "id": "5f88e8ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1740,8 +1740,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1334,
-   "id": "b8c407a9",
+   "execution_count": 1444,
+   "id": "da023f8b",
    "metadata": {},
    "outputs": [
     {
@@ -1984,7 +1984,7 @@
        "[5551 rows x 8 columns]"
       ]
      },
-     "execution_count": 1334,
+     "execution_count": 1444,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1995,75 +1995,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1335,
-   "id": "17f27304",
+   "execution_count": 1445,
+   "id": "54ac1a77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tfvec = TfidfVectorizer()\n",
+    "tfvec_matrix = tfvec.fit_transform(movies['combined_features'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1446,
+   "id": "8b33e1c5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# |exporti\n",
     "\n",
-    "count = CountVectorizer()\n",
-    "count_matrix = count.fit_transform(movies['combined_features'])"
+    "cs = cosine_similarity(tfvec_matrix)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1336,
-   "id": "41dc150f",
+   "execution_count": 1447,
+   "id": "5c83bbbb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(5551, 11040)"
-      ]
-     },
-     "execution_count": 1336,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "count_matrix.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1351,
-   "id": "c491362f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# |exporti\n",
-    "\n",
-    "cs = cosine_similarity(count_matrix)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1352,
-   "id": "cccc796b",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[1.        , 0.20100756, 0.30151134, ..., 0.        , 0.        ,\n",
+       "array([[1.        , 0.01998317, 0.03599903, ..., 0.        , 0.        ,\n",
        "        0.        ],\n",
-       "       [0.20100756, 1.        , 0.33333333, ..., 0.11111111, 0.10540926,\n",
+       "       [0.01998317, 1.        , 0.04967844, ..., 0.01583725, 0.01653657,\n",
        "        0.        ],\n",
-       "       [0.30151134, 0.33333333, 1.        , ..., 0.11111111, 0.10540926,\n",
+       "       [0.03599903, 0.04967844, 1.        , ..., 0.01516035, 0.01582978,\n",
        "        0.        ],\n",
        "       ...,\n",
-       "       [0.        , 0.11111111, 0.11111111, ..., 1.        , 0.21081851,\n",
-       "        0.21081851],\n",
-       "       [0.        , 0.10540926, 0.10540926, ..., 0.21081851, 1.        ,\n",
-       "        0.2       ],\n",
-       "       [0.        , 0.        , 0.        , ..., 0.21081851, 0.2       ,\n",
+       "       [0.        , 0.01583725, 0.01516035, ..., 1.        , 0.02201959,\n",
+       "        0.01843617],\n",
+       "       [0.        , 0.01653657, 0.01582978, ..., 0.02201959, 1.        ,\n",
+       "        0.01925025],\n",
+       "       [0.        , 0.        , 0.        , ..., 0.01843617, 0.01925025,\n",
        "        1.        ]])"
       ]
      },
-     "execution_count": 1352,
+     "execution_count": 1447,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2074,8 +2051,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1360,
-   "id": "4efe13ff",
+   "execution_count": 1448,
+   "id": "f4375632",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2090,26 +2067,31 @@
     "    for i in movies_list:\n",
     "        recommended_movies.append(movies.iloc[i[0]].clean_title)\n",
     "\n",
-    "    return recommended_movies"
+    "    return recommended_movies, movies_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1361,
-   "id": "a9d321e5",
+   "execution_count": 1453,
+   "id": "badc0941",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Avengers: Age of Ultron (2015)',\n",
-       " 'Captain America: Civil War (2016)',\n",
-       " 'Avengers: Infinity War (2018)',\n",
-       " 'Captain America: The Winter Soldier (2014)',\n",
-       " 'Spider-Man: Homecoming (2017)']"
+       "(['Avengers: Age of Ultron (2015)',\n",
+       "  'Captain America: Civil War (2016)',\n",
+       "  'Avengers: Infinity War (2018)',\n",
+       "  'Captain America: The Winter Soldier (2014)',\n",
+       "  'Avengers: Endgame (2019)'],\n",
+       " [(312, 0.6883985544902973),\n",
+       "  (129, 0.5264194102650185),\n",
+       "  (20, 0.407686152368638),\n",
+       "  (132, 0.389726490273796),\n",
+       "  (19, 0.3359866633678918)])"
       ]
      },
-     "execution_count": 1361,
+     "execution_count": 1453,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2120,14 +2102,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1362,
-   "id": "7144de25",
+   "execution_count": 1450,
+   "id": "73e05d55",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4ca3f84fb7b9458c8b951a468e012921",
+       "model_id": "4c2d0074042146c7b665a1767bb409b4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2147,8 +2129,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1357,
-   "id": "a3c12235",
+   "execution_count": 1451,
+   "id": "0dcbcb2e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2163,8 +2145,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1363,
-   "id": "aa07cbad",
+   "execution_count": 1455,
+   "id": "beced6cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2173,10 +2155,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d476fc1",
+   "id": "7f4ed3c5",
    "metadata": {},
    "source": [
-    "Please click the button to open the web app: [![Open in Streamlit](https://static.streamlit.io/badges/streamlit_badge_black_white.svg)](https://sunlongan-testmovierec-testmovierec-iqjd0v.streamlit.app/)"
+    "Please click the button to open the web app: [![Open in Streamlit](https://static.streamlit.io/badges/streamlit_badge_black_white.svg)](https://sunlongan-testmovierec2-testmovierec2-9ranf7.streamlit.app/)"
    ]
   }
  ],
